syntax = "proto3";
package reports3;

import "reports.proto";

option java_multiple_files = true;
option java_package = "sinnet.report3.grpc";


service Reports {
    rpc Produce (ReportRequest) returns (reports.FileResponse) { }
}

message ReportRequest {
    repeated GroupDetails details = 1;
}

message GroupDetails {
    repeated CustomerDetails details = 1;
    string personName = 2;
}

message CustomerDetails {
    string name = 1;
    string address = 2;
    string city = 3;
}
